Changed api/scooters/id/park to api/scooters/park Added user/scooterhunter/admin view

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ hs_err_pid*
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,java,visualstudiocode
+/target/classes/application.properties
