Created Dockerfile and production credentials to build Docker Image

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,9 +9,9 @@ server.port=8080
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.platform=mysql
 #spring.datasource.initialization-mode=always
-spring.datasource.url=jdbc:mariadb://netcup.retch100.tk:3345/testdb
-spring.datasource.username=sa
-spring.datasource.password=testpw
+spring.datasource.url=jdbc:mariadb://scooterms-mariadb:3306/scooterms
+spring.datasource.username=admin
+spring.datasource.password=NyhEVcyxch6nyNKDTeHu2QIPDFOsPJ1lXzymSHoL9op2sJOsmV
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
