Edited db sample-data initialization

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,11 +8,11 @@ server.port=8707
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.platform=mysql
-#spring.datasource.initialization-mode=always
+spring.sql.init.enabled=true
 spring.datasource.url=jdbc:mariadb://scooterms-mariadb:3306/scooterms
 spring.datasource.username=admin
 spring.datasource.password=NyhEVcyxch6nyNKDTeHu2QIPDFOsPJ1lXzymSHoL9op2sJOsmV
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
