Removed sql.init

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ server.port=8707
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.platform=mysql
-spring.sql.init.enabled=false
+#spring.sql.init.enabled=false
 spring.datasource.url=jdbc:mariadb://scooterms-mariadb:3306/scooterms
 spring.datasource.username=admin
 spring.datasource.password=NyhEVcyxch6nyNKDTeHu2QIPDFOsPJ1lXzymSHoL9op2sJOsmV
