--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8080
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.platform=mysql
-spring.sql.init.enabled=false
+#spring.sql.init.enabled=false
 spring.datasource.url=jdbc:mariadb://netcup.retch100.tk:3345/testdb
 spring.datasource.username=sa
 spring.datasource.password=testpw
